fix build :green_heart:

--- a/example.html
+++ b/example.html
@@ -17,7 +17,7 @@
 		<input id="afterprint" type="checkbox" />
 		<code>afterprint</code>
 	</label>
-	<script src="build/window-on-print.js"></script>
+	<script src="dist/bundle.js"></script>
 	<script>
 		onPrint.before(window, function () {
 			document.getElementById('beforeprint').checked = true
